# rules_tcl

./: .bazelrc  .gitignore  .mypy.ini  404.html  BUILD.bazel  MODULE.bazel  README.md  index.html  nagelfar.html  print.html  rules.html  searchindex.js  searchindex.json  tclint.html  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  presubmit.yml
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
examples/: .bazelrc  MODULE.bazel
examples/hello_world/: BUILD.bazel
examples/testing/: BUILD.bazel  math_test.tcl
tcl/: BUILD.bazel  defs.bzl  tcl_format_aspect.bzl  tcl_format_test.bzl  tcl_info.bzl  tcl_lint_aspect.bzl  tcl_lint_test.bzl
tcl/format/: BUILD.bazel
tcl/nagelfar/: BUILD.bazel  defs.bzl  extensions.bzl  nagelfar_toolchain.bzl  tcl_nagelfar_aspect.bzl  tcl_nagelfar_test.bzl
tcl/nagelfar/private/: BUILD.bazel  nagelfar.bzl  nagelfar_runner.tcl
tcl/private/: BUILD.bazel  entrypoint.tcl  providers.bzl  tcl.bzl  toolchain.bzl
tcl/private/linting/: BUILD.bazel  format_checker.py  formatter.py  lint.bzl  linter.py
tcl/private/tests/binary/: BUILD.bazel
tcl/private/tests/format/: BUILD.bazel  test_lib.tcl
tcl/private/tests/lint/: BUILD.bazel  test_lib.tcl
tcl/private/tests/nagelfar/: BUILD.bazel  test_lib.tcl
tcl/private/tests/tclint/: BUILD.bazel  pkgIndex.tcl  test_lib.tcl
tcl/settings/: BUILD.bazel  settings.bzl
tcl/tclint/: .tclint.toml  BUILD.bazel  defs.bzl  extensions.bzl  tcl_tclint_aspect.bzl  tcl_tclint_fmt_aspect.bzl  tcl_tclint_fmt_test.bzl  tcl_tclint_test.bzl  tclint_toolchain.bzl
tcl/tclint/private/: BUILD.bazel  linter.py  tclint.bzl
tcl/toolchain/: BUILD.bazel
tools/requirements/: BUILD.bazel  requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
tools/version_test/: version_test.tcl
