load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "requirements.in",
    "tcl_binary.bzl",
    "tcl_format_aspect.bzl",
    "tcl_format_test.bzl",
    "tcl_info.bzl",
    "tcl_library.bzl",
    "tcl_lint_aspect.bzl",
    "tcl_lint_test.bzl",
    "tcl_test.bzl",
    "tcl_toolchain.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//tcl/private:bzl_lib"],
)
