load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "nagelfar_toolchain.bzl",
    "tcl_nagelfar_aspect.bzl",
    "tcl_nagelfar_test.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//tcl/nagelfar/private:bzl_lib",
    ],
)
