load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":settings.bzl",
    "tclint_config",
)

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "settings_bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//julia/private:__pkg__"],
    deps = [
        "@bazel_skylib//rules:common_settings",
    ],
)

tclint_config()

exports_files([
    ".tclint.toml",
])
