load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "requirements.in",
    "tcl_tclint_fmt_aspect.bzl",
    "tcl_tclint_fmt_test.bzl",
    "tcl_tclint_aspect.bzl",
    "tcl_tclint_test.bzl",
    "tclint_toolchain.bzl",
    ".tclint.toml",
])

label_flag(
    name = "config",
    build_setting_default = ".tclint.toml",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

alias(
    name = "format",
    actual = "//tcl/tclint/private:formatter",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//tcl/tclint/private:bzl_lib",
    ],
)
