load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//tcl:tcl_binary.bzl", "tcl_binary")
load("//tcl/nagelfar:tcl_nagelfar_test.bzl", "tcl_nagelfar_test")
load("//tcl/tclint:tcl_tclint_fmt_test.bzl", "tcl_tclint_fmt_test")

tcl_binary(
    name = "writer",
    srcs = ["writer.tcl"],
)

tcl_nagelfar_test(
    name = "writer_lint",
    target = ":writer",
)

tcl_tclint_fmt_test(
    name = "writer_format",
    target = ":writer",
)

run_binary(
    name = "writer_output",
    outs = ["writer_output.txt"],
    args = [
        "--output",
        "$(execpath :writer_output.txt)",
    ],
    tool = ":writer",
)

write_file(
    name = "writer_expected",
    out = "writer_expected.txt",
    content = [
        "La-Li-Lu-Le-Lo.",
        "",
    ],
    newline = "unix",
)

diff_test(
    name = "writer_diff_test",
    file1 = ":writer_expected.txt",
    file2 = ":writer_output.txt",
)
