load("//tcl:tcl_format_test.bzl", "tcl_format_test")
load("//tcl:tcl_library.bzl", "tcl_library")

tcl_library(
    name = "test_lib",
    srcs = [
        "pkgIndex.tcl",
        "test_lib.tcl",
    ],
    visibility = ["//tcl/private/tests:__subpackages__"],
)

tcl_format_test(
    name = "test_lib_format",
    target = ":test_lib",
)
