load("//tcl:tcl_library.bzl", "tcl_library")
load("//tcl:tcl_lint_test.bzl", "tcl_lint_test")

tcl_library(
    name = "test_lib",
    srcs = [
        "pkgIndex.tcl",
        "test_lib.tcl",
    ],
    visibility = ["//tcl/private/tests:__subpackages__"],
)

tcl_lint_test(
    name = "test_lib_lint",
    target = ":test_lib",
)
