load("//tcl:tcl_library.bzl", "tcl_library")
load("//tcl/nagelfar:tcl_nagelfar_test.bzl", "tcl_nagelfar_test")

tcl_library(
    name = "test_lib",
    srcs = [
        "pkgIndex.tcl",
        "test_lib.tcl",
    ],
    visibility = ["//tcl/private/tests:__subpackages__"],
)

tcl_nagelfar_test(
    name = "test_lib_lint",
    target = ":test_lib",
)
