load("//tcl:tcl_library.bzl", "tcl_library")
load("//tcl/tclint:tcl_tclint_test.bzl", "tcl_tclint_test")

tcl_library(
    name = "test_lib",
    srcs = [
        "pkgIndex.tcl",
        "test_lib.tcl",
    ],
    visibility = ["//tcl/private/tests:__subpackages__"],
)

tcl_tclint_test(
    name = "test_lib_tclint",
    target = ":test_lib",
)
